# qr-code-generator

./: .flaskenv  Dockerfile  MANIFEST.in  Procfile  README.md  build.sh  install_dependencies.sh  package.json  pyproject.toml  requirements.txt  vercel.json
qrcodegen/: app.py  wsgi.py
qrcodegen/static/css/: styles.css
qrcodegen/static/js/: script.js
qrcodegen/templates/: index.html
